[tool.poetry]
name = "generative-models"
version = "0.1.0"
description = ""
authors = ["Wian Stipp"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
gdown = "^5.2.0"
torchvision = "^0.19.0"
pydantic = "^2.8.2"
click = "^8.1.7"
pydantic-yaml = "^1.3.0"
tensorboard = "^2.17.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
